// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ModeratorAssignDropdown/> renders the dropdown of moderators when a moderator is selected 1`] = `
<select
  className="form-control"
  onChange={[Function]}
  value={1}
>
  <option
    value=""
  />
  <option
    disabled={false}
    style={
      Object {
        "color": "#000",
      }
    }
    value={5744}
  >
    md@gmail.com
    
  </option>
  <option
    disabled={false}
    style={
      Object {
        "color": "#000",
      }
    }
    value={5315}
  >
    xdfd@gmail.com
    
  </option>
</select>
`;

exports[`<ModeratorAssignDropdown/> renders the dropdown of moderators when no moderator is selected 1`] = `
<select
  className="form-control"
  onChange={[Function]}
  value=""
>
  <option
    value=""
  />
  <option
    disabled={false}
    style={
      Object {
        "color": "#000",
      }
    }
    value={5744}
  >
    md@gmail.com
    
  </option>
  <option
    disabled={false}
    style={
      Object {
        "color": "#000",
      }
    }
    value={5315}
  >
    xdfd@gmail.com
    
  </option>
</select>
`;
